@@ -37,8 +37,8 @@ Encoding: UTF-8
 Authors@R: c(person(given="Henrik", family="Singmann",
     email="henrik.singmann@psychologie.uni-freiburg.de",
     role=c("aut", "cre")))
-Version: 0.6-76
-Date: 2013-07-23
+Version: 0.6-77
+Date: 2013-08-14
 Collate:
     'afex-package.R'
     'aov.car.R'
